# mcq_solver

./: .gitignore  Cargo.toml  LICENSE  README.md  mcq_solver-0.1.0-cp310-abi3-macosx_11_0_arm64.whl  mcq_solver-0.1.0-cp310-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  mcq_solver-0.1.0-cp310-abi3-manylinux_2_17_armv7l.manylinux2014_armv7l.whl  mcq_solver-0.1.0-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  mcq_solver-0.1.0-cp310-abi3-manylinux_2_5_i686.manylinux1_i686.whl  pyproject.toml
.github/workflows/: CI.yml
debug/: main.rs
debug/test/: mcq.rs
examples/: create_mcq.py  example.py  grades.txt
examples/basic/: create_mcq.py  example.py
examples/reading_sheets/: create_mcq.py  example.py  grades.txt
examples/reading_sheets/sheets/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  (+369 more)
examples/sheets/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+360 more)
python/mcq_solver/: __init__.py
src/: annealing.rs  basic_solve.rs  bool_tables.rs  lib.rs  main.rs  mcq.rs  parameters.rs  parsing.rs  sheet.rs  solver.rs  vec_util.rs
